--- a/css/form.css
+++ b/css/form.css
@@ -456,6 +456,7 @@ form p.error {
 	float:left;
 	background-color:#FFFFFF;
 	border-right: 1px solid #d3d7e2;
+	overflow: hidden;
 }
 .content-col{
 	width:100%;
@@ -528,7 +529,12 @@ iframe .content-col{
 	margin-right: 12px;
 }
 /*项目管理-主体区域左侧菜单*/
+div.tree-nav {
+	position: relative;
+	height: 100%;
+}
 .new-project {
+	padding: 30px 0 34px;
 	box-sizing: border-box;
 }
 .new-project a {
@@ -539,73 +545,30 @@ iframe .content-col{
 	text-align: center;
 	line-height: 46px;
 	border-radius: 23px;
-	margin: 30px auto 34px;
+	margin: 0px auto;
 	color: #578FE6;
 	font-size: 18px;
 }
 .m-folder-wrap {
-
+	position: absolute;
+	top: 114px;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	padding-bottom: 30px;
+}
+.g-folders {
+	height: 100%;
+	overflow-y: scroll;
+	overflow-x: hidden;
 }
 .g-folders li>a {
 	display: block;
+	width: 100%;
 	height: 32px;
 	line-height: 32px;
 	position: relative;
-	padding-left: 20px;
-	padding-right: 20px;
 	font-size: 14px;
-}
-.g-folders .icon-file {
-	background: url(../images/icon_file_on.png) no-repeat;
-}
-.g-folders .icon-file:hover {
-	color: #FFFFFF;
-	background:#048dff url(../images/icon_file.png) no-repeat;
-}
-.g-folders i.fa {
-	position: absolute;
-	right: 20px;
-	top: 6px;
-}
-.g-folders ul[data-level="1"]>li>a,.g-folders ul[data-level="1"]>li>a:hover{
-	text-indent: 24px;
-	background-position: 20px center;
-}
-.g-folders ul[data-level="2"]>li>a,.g-folders ul[data-level="2"]>li>a:hover{
-	text-indent: 44px;
-	background-position: 40px center;
-}
-.g-folders ul[data-level="3"]>li>a,.g-folders ul[data-level="3"]>li>a:hover{
-	text-indent: 64px;
-	background-position: 60px center;
-}
-.g-folders ul[data-level="4"]>li>a,.g-folders ul[data-level="4"]>li>a:hover{
-	text-indent: 84px;
-	background-position: 80px center;
-}
-.g-folders ul[data-level="5"]>li>a,.g-folders ul[data-level="5"]>li>a:hover{
-	text-indent: 104px;
-	background-position: 100px center;
-}
-.g-folders ul[data-level="6"]>li>a,.g-folders ul[data-level="6"]>li>a:hover{
-	text-indent: 124px;
-	background-position: 120px center;
-}
-.g-folders ul[data-level="7"]>li>a,.g-folders ul[data-level="7"]>li>a:hover{
-	text-indent: 144px;
-	background-position: 140px center;
-}
-.g-folders ul[data-level="8"]>li>a,.g-folders ul[data-level="8"]>li>a:hover{
-	text-indent: 164px;
-	background-position: 160px center;
-}
-.g-folders ul[data-level="9"]>li>a,.g-folders ul[data-level="9"]>li>a:hover{
-	text-indent: 184px;
-	background-position: 180px center;
-}
-.g-folders ul[data-level="10"]>li>a,.g-folders ul[data-level="10"]>li>a:hover{
-	text-indent: 204px;
-	background-position: 200px center;
 }
 .g-folders ul li>a:hover {
 	background-color: #048dff;
@@ -888,60 +851,7 @@ iframe .content-col{
 	border-bottom: 1px solid #d8d8d8;
 	margin-bottom: 22px;
 }
-/*zTree style*/
-.ztree li span.button.pIcon01_ico_open{margin-right:2px; background: url(../images/icon_proj_on.png) no-repeat scroll 0 0 transparent; vertical-align:top; *vertical-align:middle;background-size: cover;}
-.ztree li span.button.pIcon01_ico_close{margin-right:2px; background: url(../images/icon_proj.png) no-repeat scroll 0 0 transparent; vertical-align:top; *vertical-align:middle;background-size: cover;}
-.ztree li span.button.pIcon02_ico_open, 
-.ztree li span.button.pIcon02_ico_close{margin-right:2px; background: url(../images/icon_triangle_d.png) no-repeat scroll 0 0 transparent; vertical-align:top; *vertical-align:middle;background-size: cover;}
-.ztree li span.button.icon01_ico_docu{margin-right:2px; background: url(../images/icon_file.png) no-repeat scroll 0 0 transparent; vertical-align:top; *vertical-align:middle;background-size: cover;}
-.ztree li span.button.icon02_ico_docu{margin-right:2px; background: url(../images/icon_file_on.png) no-repeat scroll 0 0 transparent; vertical-align:top; *vertical-align:middle;background-size: cover;}
-.ztree li span.button.icon03_ico_docu{margin-right:2px; background: url(../images/icon_proj.png) no-repeat scroll 0 0 transparent; vertical-align:top; *vertical-align:middle;background-size: cover;}
-.ztree li span.button.icon04_ico_docu{margin-right:2px; background: url(../images/icon_proj_on.png) no-repeat scroll 0 0 transparent; vertical-align:top; *vertical-align:middle;background-size: cover;}
-.ztree li span.button.icon05_ico_docu{margin-right:2px; background: url(../images/icon_triangle_r.png) no-repeat scroll 0 0 transparent; vertical-align:top; *vertical-align:middle;background-size: cover;}
-.ztree li span.button.icon06_ico_docu{margin-right:2px; background: url(../images/icon_triangle_d.png) no-repeat scroll 0 0 transparent; vertical-align:top; *vertical-align:middle;background-size: cover;}
-.ztree li span.button {
-	background-image: url();
-}
-.tree-menu>li+li {
-	margin-top: 25px;
-}
-.tree-menu>li li {
-	margin-top: 25px;
-}
 
-.tree-menu .node_name {
-	font-size: 15px;
-	margin-left: 10px;
-}
-.ztree li a {
-    padding:0;
-    margin: 0;
-    cursor: pointer;
-    width: 100%;
-    height: 17px;
-    color: #333;
-    background-color: transparent;
-    text-decoration: none;
-    vertical-align: top;
-    display: inline-block;
-}
-.ztree li a.curSelectedNode {
-    padding-top: 0px;
-    background-color: transparent;
-    color: #578fe6;
-    height: 16px;
-    border: none;
-    /*opacity: 0.8;*/
-}
-.ztree li a:hover {
-     text-decoration: none; 
-     color: #578fe6;
-}
-/*modal box*/
-/*创建文件夹*/
-.file-mod {
-	/**/
-}
 .modal {
 	width: 490px;
 	height: 506px;
@@ -973,6 +883,7 @@ iframe .content-col{
 	height: 316px;
 	border: 1px solid #CCCCCC;
 	margin: 20px auto;
+	overflow-y: scroll;
 }
 .file-name-after {
 	padding-left: 34px;
@@ -987,10 +898,8 @@ iframe .content-col{
 	border: 1px solid #578fe6;
 }
 .file-btns-col {
-	/*width: 450px;*/
 	width: 100%;
 	height: 30px;
-	/*padding:10px 20px;*/
 	padding: 10px 0;
 	background-color: #FBFBFB;
 	position: absolute;
@@ -1416,15 +1325,15 @@ iframe .content-col{
 }
 /*创建项目*/
 .creat-new-projs {
-	width: 660px;
-	height: 526px;
+	/*width: 660px;
+	height: 526px;*/
 }
-.creat-new-projs .file-btns-col {
+/*.creat-new-projs .file-btns-col {
 	width: 100%;
     padding-left: 0;
     padding-right: 0;
     text-align: center;
-}
+}*/
 .create-proj-detail label {
 	display: inline-block;
 	width: 170px;
@@ -1464,8 +1373,10 @@ iframe .content-col{
 }
 /*切换版本*/
 .version-lists-box>ul {
-	padding-left:40px;
-	padding-top: 30px;
+	width: 410px;
+	height: 100%;
+	overflow-y: scroll;
+	padding: 30px 40px;
 }
 .version-lists-box>ul li {
 	padding: 10px 0;
@@ -1504,10 +1415,6 @@ iframe .content-col{
 	overflow: hidden;
 }
 /*提交测试*/
-.submit-test {
-	width: 490px;
-	height: 300px;
-}
 .submit-test>input {
 	display: block;
 	width: 350px;
@@ -2030,4 +1937,66 @@ iframe .content-col{
 	background-color: powderblue;
 	position: relative;
 }
+/*index style*/
+.resize-item{
+	width: 150px;
+	height:150px;
+	border: 1px solid red;
+	position: absolute;
+	z-index: 10000;
+}
+.set-cur-env {
+	position: absolute;
+	right: 353px;
+	top: 45px;
+	width: 150px;
+	height: 30px;
+	background-color: #FFFFFF;
+}
+.set-cur-env select {
+	width: 150px;
+	height: 30px;
+	position: absolute;
+	left: 0;
+	border: none;
+	padding-left: 15px;
+	background-color: transparent;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+}
+.set-cur-env .fa {
+	position: absolute;
+	right: 10px;
+	top: 7px;
+}
+ul.ztree {
+	margin-top: 0;
+	border: none;
+	width: auto;
+	background-color: transparent;
+	padding: 0;
+}
+div.ztree {
+	padding: 0;
+}
+.ztree * {font-size: 10pt;font-family:"Microsoft Yahei",Verdana,Simsun,"Segoe UI Web Light","Segoe UI Light","Segoe UI Web Regular","Segoe UI","Segoe UI Symbol","Helvetica Neue",Arial}
+.ztree li ul{ margin:0; padding:0}
+.ztree li {line-height:30px;}
+.ztree li a {display:block;height:30px;padding-top: 0px;}
+.ztree li a:hover {text-decoration:none; background-color: #E7E7E7;}
+.ztree li a span.button.switch {visibility:hidden}
+.ztree.showIcon li a span.button.switch {visibility:visible}
+.ztree li a.curSelectedNode {background-color:#D4D4D4;border:0;height:30px;}
+.ztree li span {line-height:30px;}
+.ztree li span.button {margin-top: -7px;}
+.ztree li span.button.switch {width: 16px;height: 16px;}
 
+.ztree li a.level0 span {font-size: 100%;font-weight: bold;}
+.ztree li span.button {background-image:url("../images/left_menuForOutLook.png"); *background-image:url("../images/left_menuForOutLook.gif")}
+.ztree li span.button.switch.level0 {width: 20px; height:20px}
+.ztree li span.button.switch.level1 {width: 20px; height:20px}
+.ztree li span.button.noline_open {background-position: 0 0;}
+.ztree li span.button.noline_close {background-position: -18px 0;}
+.ztree li span.button.noline_open.level0 {background-position: 0 -18px;}
+.ztree li span.button.noline_close.level0 {background-position: -18px -18px;}
