--- a/css/menu.css
+++ b/css/menu.css
@@ -175,12 +175,12 @@ li {
 }
 .m-uploadimg>input[type="file"]{
 	position: absolute;
-	width: 40px;
+	/*width: 40px;*/
 	height: 24px;
-	left: 70px;
+	/*left: 70px;*/
 	top: 15px;
 	z-index: 2;
-	opacity: 0;
+	/*opacity: 0;*/
 }
 .m-uploadimg>p {
 	position: absolute;
