--- a/css/menu.css
+++ b/css/menu.css
@@ -172,15 +172,17 @@ li {
 .m-uploadimg>img {
 	width: 50px;
 	height: 44px;
+	border: 1px solid #DDDDDD;
+	border-radius: 2px;
 }
 .m-uploadimg>input[type="file"]{
 	position: absolute;
-	/*width: 40px;*/
+	width: 40px;
 	height: 24px;
-	/*left: 70px;*/
+	left: 70px;
 	top: 15px;
 	z-index: 2;
-	/*opacity: 0;*/
+	opacity: 0;
 }
 .m-uploadimg>p {
 	position: absolute;
