--- a/css/BI_d3.css
+++ b/css/BI_d3.css
@@ -98,3 +98,28 @@ table th,table td{
     stroke: #000;
     shape-rendering: crispEdges;
 }
+.tooltipChart{
+    position: absolute;
+    width: 120px;
+    height: auto;
+    font-family: simsun;
+    font-size: 14px;
+    text-align: center;
+    color: white;
+    border: 2px solid black;
+    background-color: black;
+    border-radius: 5px;
+    z-index: 1000;
+}
+
+.tooltipChart:after {
+    content: '';
+    position: absolute;
+    bottom: 100%;
+    left: 20%;
+    margin-left: -8px;
+    width: 0;
+    height: 0;
+    border-bottom: 12px solid black;
+    border-right: 12px solid transparent;
+}
