--- a/css/form.css
+++ b/css/form.css
@@ -139,7 +139,7 @@ body {
 }
 .ban-box {
 	width: 100%;
-	height: 120px;
+	height: 76px;
 	line-height: 1;
 	text-align: center;
 	/*position: fixed;
@@ -149,6 +149,10 @@ body {
 .ban-main {
 	width: 100%;
 	height: 100%;
+}
+.ban-main>img {
+	width: 100%;
+	height: 76px;
 }
 .form {
 	text-align: center;
@@ -337,8 +341,9 @@ form p.error {
 	top: 0;
 	right: 0;
 	width: 353px;
-	height: 120px;
+	height: 76px;
 	background: url(../images/banner.png) no-repeat right 0;
+	background-size: 100% 76px;
 }
 .msg-unread {
 	position: absolute;
@@ -369,23 +374,23 @@ form p.error {
 }
 .headimg {
 	position: absolute;
-	top: 30px;
+	top: 16px;
 	right: 34px;
-	width: 60px;
-	height: 60px;
+	width: 44px;
+	height: 44px;
 	border-radius: 50%;
 	cursor: pointer;
 }
 .rdown {
 	position: absolute;
-	top: 57px;
+	top: 36px;
 	right: 0;
 	cursor: pointer;
 }
 .user-info>ul {
 	position: absolute;
 	width: 120px;
-	top: 120px;
+	top: 76px;
 	right: 0;
 	display: none;
 	z-index: 9999;
@@ -393,9 +398,9 @@ form p.error {
 .user-info>ul a{
 	display: block;
 	width: 118px;
-	height: 48px;
+	height: 40px;
 	border: 1px solid #038dff;
-	line-height: 48px;
+	line-height: 40px;
 	color: #038dff;
 	font-size: 12px;
 	background-color: #FFFFFF;
@@ -411,7 +416,7 @@ form p.error {
 	position:absolute;
 	z-index: 2;
 	left: 240px;
-	margin-top: -50px;
+	margin-top: -40px;
 	background-color:transparent;
 }
 .menu-top li {
@@ -422,13 +427,14 @@ form p.error {
 }
 .menu-top li a {
 	display: block;
-	width: 180px;
-	height: 50px;
-	line-height: 50px;
+	width: 160px;
+	height: 40px;
+	line-height: 40px;
 	text-align: center;
-	font-size: 22px;
+	font-size: 18px;
 	color: #FFFFFF;
 	background: url(../images/menubg.png) no-repeat;
+	background-size: 160px 40px;
 }
 .menu-top li.active a {
 	color:#578fe6;
@@ -440,7 +446,7 @@ form p.error {
 	left:0;
 	right:0;
 	bottom:0;
-	top: 120px;
+	top: 76px;
 }
 .bd-body{
 	width:100%;
@@ -2144,7 +2150,7 @@ div.f-addbtn-box-auto li{
 .set-cur-env {
 	position: absolute;
 	right: 353px;
-	top: 45px;
+	top: 23px;
 	width: 150px;
 	height: 30px;
 	background-color: #FFFFFF;
