--- a/css/form.css
+++ b/css/form.css
@@ -588,6 +588,7 @@ div.tree-nav {
 	position:relative;
 	height:100%;
 	width:100%;
+	/*width:94.5%;*/
 	overflow: hidden;
 }
 .mod-box {
@@ -1917,7 +1918,7 @@ div.f-addbtn-box-auto li{
 	max-height: 40%;
 	padding-bottom: 10px;
 	border-top: 1px solid #D9D9D9;
-	overflow-y:scroll;
+	overflow-y: auto;
 }
 .same-resource ul {
 	min-height: 32px;
