--- a/css/gooflow/GooFlow.css
+++ b/css/gooflow/GooFlow.css
@@ -240,7 +240,7 @@ v\:group,v\:rect,v\:imagedata,v\:oval,v\:line,v\:polyline,v\:stroke,v\:textbox {
     background-size: 18px 18px;
 }
 .GooFlow .ico_shell {
-    background: url(../../images/shell.png) no-repeat center;
+    background: url(../../images/shengchengSQL.png) no-repeat center;
     background-size: 18px 18px;
 }
 .GooFlow .ico_spark {
