--- a/css/first.css
+++ b/css/first.css
@@ -250,10 +250,11 @@
     left: 100%;
     -webkit-transform-origin: left center;
     transform-origin: left center;
-    background-color: yellowgreen;
+    /*background-color: yellowgreen;*/
 }
 .business>ul>li .detail .detail-header {
     padding: 46px 30px 0;
+   	/*padding: 0 30px 0;*/
     color: #fff;
     /*width: 100%;*/
     height: 198px;
@@ -267,7 +268,7 @@
 .business>ul>li .detail.cases .detail-header {
 	background: url(https://assets.megvii.com/static/images/home/business/business_cases_pop.jpg) no-repeat 0 0;
 }
-.home_business>ul>li .detail.ssn .detail-header {
+.business>ul>li .detail.ssn .detail-header {
 	background: url(https://assets.megvii.com/static/images/home/business/business_ssn_pop.jpg) no-repeat 0 0;
 }
 .business>ul>li .detail .detail-header h3 {
@@ -283,12 +284,13 @@
 .business>ul>li .detail .detail-header h3 {
     font-size: 24px;
     margin-bottom: 10px;
+    color: #fff;
 }
 .business>ul>li .detail .detail-header p {
     line-height: 24px;
     text-align: left;
     font-size: 14px;
-    color: #838383;
+    color: #fff;
     margin-top: 20px;
 }
 .business>ul>li .detail ul {
@@ -380,6 +382,7 @@
     font-size: 14px;
     line-height: 20px;
     color: #7b7b7b;
+    width: 100px;
 }
 .business>ul>li .detail.faceid ul li p {
     font-size: 12px;
@@ -423,14 +426,14 @@
 }
 .business>ul>li .detail {
     position: absolute;
-    opacity: 0;
+    opacity: 1;
     filter: Alpha(Opacity=0);
     margin-left: -253px;
     margin-top: -300px;
     width: 505px;
     height: 600px;
     margin: -300px 0 0 -253px;
-    z-index: -1;
+    z-index: 999;
     top: 50%;
     left: 50%;
     background-color: #fff;
@@ -438,8 +441,8 @@
     -o-box-shadow: 0 2px 14px 4px rgba(14,5,10,.15);
     box-shadow: 0 2px 14px 4px rgba(14,5,10,.15);
     transition: all .3s ease 0s;
-    -webkit-transform: scale(0);
-    transform: scale(0);
+    -webkit-transform: scale(1);
+    transform: scale(1);
 }
 .business>ul>li .detail.facepp .detail-header {
     color: #fff;
