--- a/css/BI_d3.css
+++ b/css/BI_d3.css
@@ -13,12 +13,6 @@
     stroke: rgb(0, 0, 0);
     shape-rendering: crispEdges;
 }
-.axis path,
-.axis line {
-    fill: none;
-    stroke: #000;
-    shape-rendering: crispEdges;
-}
 .bar {
     fill: green;
 }
@@ -92,13 +86,6 @@ table th,table td{
     display: none;
     z-index: 1000;
 }
-
-.axis path,
-.axis line {
-    fill: none;
-    stroke: #000;
-    shape-rendering: crispEdges;
-}
  /*2017-10-25 饼图*/
 .tooltipChart{
     position: absolute;
@@ -130,12 +117,6 @@ table th,table td{
 .title{font-family:Arial,微软雅黑;font-size:18px;text-anchor:middle;}
 .subTitle{font-family:Arial,宋体;font-size:12px;text-anchor:middle;fill:#666}
 
-.axis path,
-.axis line {
-    fill: none;
-    stroke: black;
-    shape-rendering: crispEdges;
-}
 .axis text {
     font-family: sans-serif;
     font-size: 11px;
@@ -160,3 +141,60 @@ table th,table td{
 .bar {
     fill: steelblue;
 }
+
+/*  2017-11-2 甘特图 -- 开始*/
+.bar-failed {
+    fill: #CC0000;
+}
+
+.bar-running {
+    fill: #669900;
+}
+
+.bar-succeeded {
+    fill: #33b5e5;
+}
+
+.bar-killed {
+    fill: #ffbb33;
+}
+
+#forkme_banner {
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 10px;
+    z-index: 10;
+    padding: 10px 50px 10px 10px;
+    color: #fff;
+    background:
+            url('http://dk8996.github.io/Gantt-Chart/images/blacktocat.png')
+            #0090ff no-repeat 95% 50%;
+    font-weight: 700;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .5);
+    border-bottom-left-radius: 2px;
+    border-bottom-right-radius: 2px;
+    text-decoration: none;
+}
+/*  甘特图 -- 结束*/
+
+/* 仪表图 -- 开始 */
+.label{
+    font-size:22.5px;
+    fill:#ffffff;
+    text-anchor:middle;
+    alignment-baseline:middle;
+}
+.face{
+    stroke:#c8c8c8;
+    stroke-width:2;
+}
+.minorTicks{
+    stroke-width:2;
+    stroke:white;
+}
+.majorTicks{
+    stroke:white;
+    stroke-width:3;
+}
+/* 仪表图 -- 结束 */
