添加测试模式时，只显示预览；删除js中的d3.js（没有引用）

--- a/css/form.css
+++ b/css/form.css
@@ -2285,3 +2285,15 @@ div.ztree {
 	height:14px;
 	font-size:12px;
 }
+/*BI页面 -- 生成环境*/
+.generateEditBi{
+	position: relative;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	display: block;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+}
