--- a/css/menu.css
+++ b/css/menu.css
@@ -568,10 +568,10 @@ li {
 	display: none;
 }
 .link-modal>.ztree {
-	width: 100%;
+	padding: 0 20px;
 	height: 100%;
 	overflow-x: hidden;
-	overflow-y: scroll;
+	/*overflow-y: scroll;*/
 	background-color: #FFFFFF;
 }
 /*tree*/
