--- a/css/page.css
+++ b/css/page.css
@@ -149,7 +149,7 @@
 	width: 100%;
 	min-height: 150px;
 	overflow-x: hidden;
-	overflow-y: scroll;
+	/*overflow-y: scroll;*/
 	background-color: #FFFFFF;
 }
 /**/
