修改项目中的bug

--- a/css/menu.css
+++ b/css/menu.css
@@ -410,6 +410,9 @@ li {
 	left: 50px;
 	top: 20px;
 }
+.m-html-mod0 .mn-logobox>img {
+	height: 100%;
+}
 .m-html-mod0 .mn-headtxt {
 	right: 100px;
 	top: 20px;
