修改筛选中包含、排除、选择全部的bug和部分功能；修改创建后需要移动才能保存的bug

--- a/css/form.css
+++ b/css/form.css
@@ -2164,6 +2164,9 @@ div.f-addbtn-box-auto li{
 	position: absolute;
 	background-color:#fff;
 }
+/*.resize-item:hover{*/
+	/*box-shadow: 0 0 6px #58bee9;*/
+/*}*/
 .set-cur-env {
 	position: absolute;
 	right: 353px;
