--- a/css/menu.css
+++ b/css/menu.css
@@ -68,6 +68,9 @@ li {
 	text-indent: 16px;
 	font-size: 12px;
 }
+.m-cont0>div>h4.active{
+	background: url(../images/icon_right.png) no-repeat 0 center;
+}
 .m-cont-box1 ul {
 	width: 100%;
 	height: 50px;
@@ -182,12 +185,12 @@ li {
 }
 .m-uploadimg>input[type="file"]{
 	position: absolute;
-	width: 40px;
-	height: 24px;
-	left: 70px;
-	top: 15px;
-	z-index: 2;
-	opacity: 0;
+    width: 60px;
+    height: 20px;
+    left: 60px;
+    top: 25px;
+    z-index: 10;
+    opacity: 0;
 }
 .m-uploadimg>p {
 	position: absolute;
@@ -528,14 +531,15 @@ li {
     -webkit-align-items: center;
     align-items: center;
 }
-.swiper-wrapper {
+/*.swiper-wrapper {
 	width: 190px;
 	margin: 0 auto;
-}
+}*/
 .swiper-slide {
 	font-size: 12px;
 	color: #3D5275;
 	line-height: 14px;
+	width: 50%;
 }
 
 .swiper-button-next {
@@ -546,11 +550,11 @@ li {
 	background:#FFFFFF url(../images/triangle_left.png) no-repeat center center;
 	left: 0;
 }
-.swiper-button-next, .swiper-button-prev{
+/*.swiper-button-next, .swiper-button-prev{
 	width: 36px;
     height: 30px;
     margin-top: -15px;
-}
+}*/
 .swiper-slide.active{
 	color: #007AFF;
 }
