--- a/css/reset.css
+++ b/css/reset.css
@@ -116,6 +116,15 @@ body{
     background:url(../images/xuankuangbeijing.png) no-repeat 130px 0px;
     color: #666;
 }
+.form_validator input{
+    height: 28px;
+    width: 160px;
+    border: 1px solid #d3d7e2;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
+    color: #666;
+}
 .form_btn{
     display: inline-block;
     width: 80px;
